--- a/1_Generate HAIM-MIMIC-MM from downloaded MIMIC-IV and MIMIC-CXR.ipynb
+++ b/1_Generate HAIM-MIMIC-MM from downloaded MIMIC-IV and MIMIC-CXR.ipynb
@@ -421,9 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROCESSING \"ICU\" DB...\n",
+      "[########################################] | 100% Completed | 5.60 ss\n",
+      "[########################################] | 100% Completed | 13.18 s\n",
+      "[########################################] | 100% Completed | 111.00 s\n",
+      "[########################################] | 100% Completed | 427.40 ms\n",
+      "[########################################] | 100% Completed | 26.89 s\n",
+      "[                                        ] | 0% Completed | 162.76 ss"
+     ]
+    }
+   ],
    "source": [
     "## ICU\n",
     "print('PROCESSING \"ICU\" DB...')\n",
