adaptation for multifix

--- a/2_Generate Embeddings from Pickle Files.ipynb
+++ b/2_Generate Embeddings from Pickle Files.ipynb
@@ -102,7 +102,7 @@
     "    densefeature_embeddings, prediction_embeddings = get_single_chest_xray_embeddings(img)\n",
     "    gc.collect() #Clear memory\n",
     "\n",
-    "    # Create Dataframes filteed by ordered sample number for Fusion\n",
+    "    # Create Dataframes filtered by ordered sample number for Fusion\n",
     "    df_haim_ids_fusion = pd.DataFrame([haim_id],columns=['haim_id'])\n",
     "    df_demographics_embeddings_fusion = pd.DataFrame(demo_embeddings.reshape(1,-1), columns=['de_'+str(i) for i in range(demo_embeddings.shape[0])])\n",
     "    df_ts_ce_embeddings_fusion = pd.DataFrame(aggregated_ts_ce_embeddings.values.reshape(1,-1), columns=['ts_ce_'+str(i) for i in range(aggregated_ts_ce_embeddings.values.shape[0])])\n",
