--- a/3_Use Embedding for Prediction.ipynb
+++ b/3_Use Embedding for Prediction.ipynb
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.1.undefined"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
